--- a/tutorial.html
+++ b/tutorial.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="theme.css">
     <script src="main.js"></script>
 </head>
 <body>
-     <a href="apge2.html">
+     <a href="1startscreen.html"
        <h2>Back </h2>
     </a>
     <p>Just press the keys</p>
+
+    <style= backg</style>
     
 </body>
 </html>
