--- a/credits.html
+++ b/credits.html
@@ -9,7 +9,7 @@
     <script src="main.js"></script>
 </head>
 <body>
-     <a href="apge2.html">
+     <a href="1startscreen.html">
         <h2>Back </h2>
     </a>
     <p>Made by Wasacasa aka AliExpress aka Ideale schoonzoon</p>
